--- a/arch/arm/boot/dts/qcom/xiaomi/tulip/tulip-base.dtsi
+++ b/arch/arm/boot/dts/qcom/xiaomi/tulip/tulip-base.dtsi
@@ -12,6 +12,7 @@
 
 #include "tulip-camera-sensor-mtp.dtsi"
 #include "focaltech-ft8719-i2c.dtsi"
+#include "SAR-sensor-regulator-e7t.dtsi"
 
 /* msm-pm660.dtsi tulip specific diff */
 &pm660_charger {
@@ -55,34 +56,3 @@
 	qcom,mdss-dsi-bl-max-level = <4095>;
 	qcom,panel-supply-entries = <&dsi_panel_pwr_supply>;
 };
-
-/* SAR-sensor-regulator-e7t.dtsi */
-&rpm_bus{
-	rpm-regulator-ldoa18 {
-		compatible = "qcom,rpm-smd-regulator-resource";
-		qcom,resource-name = "ldoa";
-		qcom,resource-id = <18>;
-		qcom,regulator-type = <0>;
-		status = "okay";
-
-		pm660_l18:regulator-l18 {
-			compatible = "qcom,rpm-smd-regulator";
-			regulator-name = "pm660_l18";
-			qcom,set = <3>;
-			regulator-min-microvolt = <1780000>;
-			regulator-max-microvolt = <1950000>;
-			status = "okay";
-			regulator-always-on;
-		};
-	};
-
-	rpm-regulator-ldoa13 {
-		status = "okay";
-		pm660_l13: regulator-l13 {
-			regulator-min-microvolt = <1780000>;
-			regulator-max-microvolt = <1950000>;
-			status = "okay";
-			regulator-always-on;
-		};
-	};
-}; 
